# luajit

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  dist.info
cmake/: lua.cmake
etc/: luajit.pc  luavs.bat
include/: luaconf.h
jit/: dis_x86.lua  dump.lua  dumphints.lua  opt.lua  opt_inline.lua  trace.lua
jitdoc/: bluequad.css  coco.html  coco_api.html  coco_changes.html  coco_portability.html  contact.html  dynasm.html  dynasm_examples.html  dynasm_features.html  index.html  luajit.html  luajit_api.html  luajit_changes.html  luajit_debug.html  luajit_features.html  luajit_install.html  luajit_intro.html  luajit_performance.html  luajit_run.html
lib/: liblua.dylib
src/: .gitignore  Makefile  buildvm_x86.h  lbaselib.c  lcoco.c  lcoco.h  lcode.c  ldo.c  lib_base.c  lib_package_rel.c  ljit.h  ljit_backend.c  ljit_core.c  ljit_dasm.c  ljit_dasm.h  ljit_hints.h  ljit_mem.c  ljit_x86.dasc  ljit_x86.dash  ljit_x86.h  ljit_x86_inline.dash  ljitlib.c  loadlib.c  loadlib_rel.c  lstrlib.c  lua.def  lua.h  lua.rc  lua_dll.rc  lua_simple.rc  luac.rc  luaconf.h.in  luajit.h  luajit.rc  lvm.c  msvcbuild.bat
